tests/spec/emit/snapshots/for_loop_map_both_wildcards.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(m: Map<string, int>) -> int {
    let mut count = 0;
    for (_, _) in m {
      count += 1;
    };
    count
  }
---
package main

func test(m map[string]int) int {
	count := 0
	for range m {
		count++
	}
	return count
}
