tests/spec/emit/snapshots/for_loop_nonzero_start_keeps_the_counted_form.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(from: int) -> int {
    let mut sum = 0
    for i in 1..5 {
      sum = sum + i
    }
    for j in from..5 {
      sum = sum + j
    }
    sum
  }
---
package main

func test(from int) int {
	sum := 0
	for i := 1; i < 5; i++ {
		sum += i
	}
	for j := from; j < 5; j++ {
		sum += j
	}
	return sum
}
