tests/spec/emit/snapshots/for_loop_over_range.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() -> int {
    let xs = [1, 2, 3, 4, 5];
    let mut sum = 0;
    for x in xs {
      sum = sum + x;
    };
    sum
  }
---
package main

func test() int {
	xs := []int{1, 2, 3, 4, 5}
	sum := 0
	for _, x := range xs {
		sum += x
	}
	return sum
}
