tests/spec/emit/snapshots/for_loop_range_alias_uses_stored_range_form.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \ntype Span = Range<int>\n\nfn sum(r: Span) -> int {\n  let mut total = 0\n  for i in r {\n    total = total + i\n  }\n  total\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Span = lisette.Range[int]

func sum(r Span) int {
	total := 0
	for i := r.Start; i < r.End; i++ {
		total += i
	}
	return total
}
