tests/spec/emit/snapshots/for_loop_range_exclusive.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let mut sum = 0;
    for i in 0..5 {
      sum = sum + i;
    };
    sum
  }
---
package main

func test() int {
	sum := 0
	for i := range 5 {
		sum += i
	}
	return sum
}
