tests/spec/emit/snapshots/for_loop_range_from.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let mut sum = 0;
    for i in 0.. {
      if i >= 5 {
        break;
      }
      sum = sum + i;
    };
    sum
  }
---
package main

func test() int {
	sum := 0
	for i := 0; ; i++ {
		if i >= 5 {
			break
		}
		sum += i
	}
	return sum
}
