tests/spec/emit/snapshots/for_loop_range_from_call.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn get_range() -> Range<int> { 0..5 }
  
  fn test() -> int {
    let mut sum = 0;
    for i in get_range() {
      sum = sum + i;
    };
    sum
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func getRange() lisette.Range[int] {
	return lisette.Range[int]{
		Start: 0,
		End:   5,
	}
}

func test() int {
	sum := 0
	range_1 := getRange()
	for i := range_1.Start; i < range_1.End; i++ {
		sum += i
	}
	return sum
}
