tests/spec/emit/snapshots/for_loop_range_inclusive.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let mut sum = 0;
    for i in 0..=5 {
      sum = sum + i;
    };
    sum
  }
---
package main

func test() int {
	sum := 0
	for i := 0; i <= 5; i++ {
		sum += i
	}
	return sum
}
