tests/spec/emit/snapshots/for_loop_range_start_frozen_before_call_bound.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let mut n = 1
    let consume = || -> int { n = 5; 4 }
    let mut sum = 0
    for i in n..consume() {
      sum += i
    }
    sum
  }
---
package main

func test() int {
	n := 1
	consume := func() int {
		n = 5
		return 4
	}
	sum := 0
	start := n
	bound := consume()
	for i := start; i < bound; i++ {
		sum += i
	}
	return sum
}
