tests/spec/emit/snapshots/for_loop_range_wildcard.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn do_work() {}
  
  fn test() {
    for _ in 0..3 {
      do_work();
    }
  }
---
package main

func doWork() {}

func test() {
	for _i_1 := 0; _i_1 < 3; _i_1++ {
		doWork()
	}
}
